# PenPlan-PDDL

./: README.md  pyproject.toml
dataset/PenPlan-PDDL-500/: LICENSE  README.md  RELEASE_NOTES.md
dataset/PenPlan-PDDL-500/docs/: FIXES_SUMMARY.md  QUALITY_ASSURANCE.md
dataset/PenPlan-PDDL-500/domains/: network-subdomain.pddl  pentest-complete-domain.pddl  pentest-root-domain.pddl  service-subdomain.pddl  system-subdomain.pddl
dataset/PenPlan-PDDL-500/metadata/: QUALITY_REPORT.md  aurora_conversion_summary.json  dataset_info.json  pddl_solving_results_20251103_222642.csv  pddl_solving_results_20251103_222642.json  pddl_solving_results_20251103_231430.csv  pddl_solving_results_20251103_231430.json  real_solving_results_20251103_232242.csv  real_solving_results_20251103_232704.csv  real_solving_results_20251103_233406.csv  real_solving_results_20251103_234119.csv  real_solving_results_20251103_235121.csv  real_solving_results_20251104_000354.csv  real_solving_results_20251104_001114.csv  real_solving_results_20251104_002015.csv  statistics_20251103_222642.json  (+13 more)
evaluation/: __init__.py  baselines.py  evaluator.py
penplan_pddl/: __init__.py  cli.py  config.py  knowledge_graph.py  pipeline.py
penplan_pddl/agents/: __init__.py  base.py  roles.py
penplan_pddl/data/: knowledge_graph.json
penplan_pddl/pddl/: __init__.py  domain.py  problem.py  repair.py  solver.py
penplan_pddl/plan/: __init__.py  types.py
penplan_pddl/utils/: __init__.py  vectors.py
scenarios/: example_scenario.json
scripts/: run_ablation.py  run_evaluation.py
tests/: test_pipeline.py
(+2 files in other folders)
