[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "penplan-pddl"
version = "0.1.0"
description = "Public release implementation of the PenPlan-PDDL planning pipeline"
readme = "README.md"
authors = [{name = "PenPlan Research Group"}]
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = []

[project.urls]
Homepage = "https://example.com/penplan-pddl"
